--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wsa"
-version = "0.1.6"
+version = "0.1.7"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -8,6 +8,7 @@ dependencies = [
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
     "qt-material>=2.17",
+    "requests>=2.32.4",
 ]
 
 [[tool.uv.index]]
