--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pyside6>=6.9.1",
     "qt-material>=2.17",
     "requests>=2.32.4",
+    "selenium>=4.33.0",
+    "webdriver-manager>=4.0.2",
 ]
 
 [[tool.uv.index]]
