--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "awscli>=1.40.35",
+    "boto3>=1.38.36",
     "pydrive2>=1.21.3",
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
