--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "awscli>=1.40.35",
     "boto3>=1.38.36",
+    "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
     "qt-material>=2.17",
