--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "wsa"
-version = "0.1.7"
+version = "0.1.36"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "awscli>=1.40.35",
     "boto3>=1.38.36",
+    "keyring>=25.6.0",
     "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
