--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "awscli>=1.40.35",
     "boto3>=1.38.36",
     "keyring>=25.6.0",
+    "pandas>=2.3.1",
     "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
