--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "awscli>=1.40.35",
     "boto3>=1.38.36",
+    "fastapi[standard]>=0.116.1",
     "keyring>=25.6.0",
     "pandas>=2.3.1",
     "pillow>=11.3.0",
