--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ dependencies = [
     "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
     "pyside6>=6.9.1",
+    "python-multipart>=0.0.20",
     "qt-material>=2.17",
     "requests>=2.32.4",
     "selenium>=4.33.0",
+    "uvicorn>=0.35.0",
     "webdriver-manager>=4.0.2",
 ]
 
