--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wsa"
-version = "0.3.3"
+version = "0.4.1"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -10,6 +10,7 @@ dependencies = [
     "keyring>=25.6.0",
     "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
+    "pyperclip>=1.9.0",
     "pyside6>=6.9.1",
     "qt-material>=2.17",
     "requests>=2.32.4",
