--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "awscli>=1.40.35",
     "boto3>=1.38.36",
+    "drissionpage>=4.1.1.2",
+    "helium>=5.1.1",
     "keyring>=25.6.0",
     "pillow>=11.3.0",
     "pyinstaller>=6.14.0",
@@ -15,6 +17,7 @@ dependencies = [
     "qt-material>=2.17",
     "requests>=2.32.4",
     "selenium>=4.33.0",
+    "seleniumbase>=4.40.8",
     "webdriver-manager>=4.0.2",
 ]
 
