--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wsa"
-version = "1.0.2"
+version = "v1.1.4"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
