--- a/aws_config.json
+++ b/aws_config.json
@@ -1,4 +1,4 @@
 {
-    "aws_access_key_id": "AKIA5555555555555555",
-    "aws_secret_access_key": "1234567890123456789012345678901234567890"
+    "aws_access_key_id": "YOUR_AWS_ACCESS_KEY_ID_HERE",
+    "aws_secret_access_key": "YOUR_AWS_SECRET_ACCESS_KEY_HERE"
 }
